<resources>
    <string name="app_name">DiyCode</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="menu_search">搜索</string>
    <string name="menu_notification">通知</string>
    <string name="email_username">邮箱 / 用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="logout">退出账号</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="tips_login">正在登录…</string>
    <string name="tips_error">error</string>
    <string name="tips_no_more">没有更多内容</string>
    <string name="bt_retry">重试</string>
    <string name="bt_ignore">忽略</string>
    <string name="no_connection">No Connection</string>
    <string name="no_connection_msg">We could not establish a connection with our servers. Please
        try again when you are connected to the internet.
    </string>
    <string name="favorite">收藏</string>
    <string name="my_favorites">我的收藏</string>
    <string name="user_favorites">{0}的收藏</string>
    <string name="topic">帖子</string>
    <string name="topic_detail">话题</string>
    <string name="my_topics">我的帖子</string>
    <string name="user_topics">{0}的帖子</string>
    <string name="relies">我的评论</string>
    <string name="user_replies">{0}的评论</string>
    <string name="share">分享</string>
    <string name="preview">预览</string>
    <string name="insert_link">插入链接</string>
    <string name="link_can_not_be_empty">链接不能为空</string>
    <string name="link_title_can_not_be_empty">链接标题不能为空</string>
    <string name="link">链接</string>
    <string name="link_title">链接标题</string>
    <string name="site">酷站</string>
    <string name="comment_floor">{0}楼</string>
    <string name="just_now">刚刚</string>
    <string name="minutes_ago">{0}分钟前</string>
    <string name="hours_ago">{0}小时前</string>
    <string name="days_ago">{0}天前</string>
    <string name="months_ago">{0}月前</string>
    <string name="years_ago">{0}年前</string>
    <string name="comment">评论</string>
    <string name="create_topic">发布新话题</string>
    <string name="clear_all_notification">清除所有通知</string>
    <string name="notification_topic_reply">{0} 在帖子{1}回复了:</string>
    <string name="notification_follow">开始关注你了。</string>
    <string name="notification_mention">{0} 提及你:</string>
    <string name="notification_empty_mention">服务器返回了空的Mention。</string>
    <string name="markdown_syntax_reference">语法说明</string>
    <string name="unread_count">{0}条未读</string>
    <string name="reply_count">共收到{0}条回复</string>
    <string name="total_cache_description">当前缓存文件大小约为{0}</string>
    <string name="settings">设置</string>
    <string name="user_page">个人主页</string>
    <string name="user_id_description">第 {0} 位会员</string>
    <string name="github_user_url">https://github.com/{0}</string>
    <string name="twitter_user_url">https://twitter.com/{0}</string>
    <string name="open_source_licenses">开源许可</string>
    <string name="floor_deleted">{0}楼 Deleted</string>

    <string-array name="main_tabs">
        <item>topics</item>
        <item>news</item>
        <item>project</item>
    </string-array>

</resources>
