<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_error_layout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips_error"
        android:textColor="@color/colorTextSecondary" />

    <TextView
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_msg"
        android:layout_marginRight="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:layout_toLeftOf="@+id/button_ignore"
        android:padding="@dimen/spacing_xsmall"
        android:text="@string/bt_retry"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/button_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/error_msg"
        android:layout_marginRight="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:padding="@dimen/spacing_xsmall"
        android:text="@string/bt_ignore"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/holo_blue_light" />

</RelativeLayout>