<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/content_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:background="@drawable/selector_subtle"
                android:orientation="vertical"
                android:padding="@dimen/spacing">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="@dimen/header_size_large"
                        android:layout_height="@dimen/header_size_large"
                        tools:src="@drawable/ic_default_header" />


                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing"
                        android:layout_toRightOf="@id/user_avatar"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/dimenTextSecondary"
                        tools:text="xshengcn(Hsum)" />

                    <TextView
                        android:id="@+id/user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/username"
                        android:layout_marginLeft="@dimen/spacing"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_toRightOf="@id/user_avatar"
                        android:textColor="@color/colorTextTertiary"
                        android:textSize="@dimen/dimenTextSecondary"
                        tools:text="第 3711 位会员" />

                    <TextView
                        android:id="@+id/user_join"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_id"
                        android:layout_marginLeft="@dimen/spacing"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_toRightOf="@id/user_avatar"
                        android:textColor="@color/colorTextTertiary"
                        android:textSize="@dimen/dimenTextSecondary"
                        tools:text="2017-01-17" />


                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing">

                    <com.xshengcn.diycode.ui.widget.TitleDescriptionView
                        android:id="@+id/user_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rowDescription="关注者"
                        tools:rowTitle="1" />


                    <com.xshengcn.diycode.ui.widget.TitleDescriptionView
                        android:id="@+id/user_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        app:rowDescription="正在关注"
                        tools:rowTitle="10" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/recent_reply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:background="@drawable/selector_subtle"
                android:padding="@dimen/spacing"
                android:text="最近回复"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/dimenTextSecondary" />

            <LinearLayout
                android:id="@+id/topic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:background="@drawable/selector_subtle"
                android:orientation="horizontal"
                android:padding="@dimen/spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/topic"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/dimenTextSecondary" />

                <TextView
                    android:id="@+id/topic_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/colorTextTertiary"
                    android:textSize="@dimen/dimenTextSecondary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider"
                android:background="@drawable/selector_subtle"
                android:orientation="horizontal"
                android:padding="@dimen/spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/favorite"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/dimenTextSecondary" />

                <TextView
                    android:id="@+id/favorite_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/colorTextTertiary"
                    android:textSize="@dimen/dimenTextSecondary" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/share_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider"
                android:background="@drawable/selector_subtle"
                android:orientation="horizontal"
                android:padding="@dimen/spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/dimenTextSecondary" />

                <TextView
                    android:id="@+id/share_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/colorTextTertiary"
                    android:textSize="@dimen/dimenTextSecondary" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing" />

            <TextView
                android:id="@+id/user_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_subtle"
                android:drawableLeft="@drawable/ic_github_circle"
                android:drawablePadding="@dimen/spacing"
                android:gravity="center_vertical"
                android:padding="@dimen/spacing"
                android:text="GitHub"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/dimenTextSecondary"
                android:visibility="gone" />


            <TextView
                android:id="@+id/user_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider"
                android:background="@drawable/selector_subtle"
                android:drawableLeft="@drawable/ic_twitter_circle"
                android:drawablePadding="@dimen/spacing"
                android:padding="@dimen/spacing"
                android:text="Twitter"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/dimenTextSecondary"
                android:visibility="gone" />


            <TextView
                android:id="@+id/user_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider"
                android:background="@drawable/selector_subtle"
                android:drawableLeft="@drawable/ic_website"
                android:drawablePadding="@dimen/spacing"
                android:padding="@dimen/spacing"
                android:text="Website"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/dimenTextSecondary"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>